<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".Configuration">

    <ImageView
        android:id="@+id/imageYana"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:src="@drawable/yana" />

    <TextView
        android:id="@+id/textview_server_ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_server_ip"/>

    <Button
        android:id="@+id/button_server_ip_conf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/bullebleu"
        android:text="@string/button_server_ip_conf" />

    <TextView
        android:id="@+id/textview_server_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_server_user"/>

    <EditText
        android:id="@+id/edittext_server_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_server_user"
        android:inputType="text"/>

    <TextView
        android:id="@+id/textview_client_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_client_password"/>

    <EditText
        android:id="@+id/edittext_client_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_client_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_checkbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_checkbox_parametre"/>

    <CheckBox
        android:id="@+id/checkbox_saveparametres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:checked="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_connection_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/button_connection_server"
        android:textColor="@color/white"
        android:background="@drawable/bullebleu"
        android:onClick="server_connection"/>

</LinearLayout>
